Implementing simple search

--- a/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
@@ -1,7 +1,82 @@
-﻿
+﻿@model IEnumerable<SalesWebMvc.Models.SalesRecord>
+
 @{
     ViewData["Title"] = "Simple Search";
 }
 
 <h1>@ViewData["Title"]</h1>
+
+<nav class="navbar navbar-expand-md bg-dark">
+    <div class="container-fluid">
+        <form class="navbar-nav w-100" role="search">
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="minDate">Min Date</label>
+                    <input type="date" class="form-control" name="minDate" value=@ViewData["minDate"] />
+                </div>
+                <div class="form-group">
+                    <label for="maxDate">Max Date</label>
+                    <input type="date" class="form-control" name="maxDate" value=@ViewData["maxDate"] />
+                </div>
+                <button type="submit" class="btn btn-primary">Filter</button>
+            </div>
+        </form>
+    </div>
+</nav>
+<div class="card">
+    <div class="card-header">
+        <h3 class="card-title">Total Sales = @Model.Sum(obj => obj.Amount).ToString("F2")</h3>
+    </div>
+    <div class="card-body">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr class="bg-primary text-white">
+                    <th>
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Date)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Seller)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Seller.Department)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Amount)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Status)
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var item in Model)
+                {
+                <tr>
+                    <th>
+                        @Html.DisplayFor(model => item.Id)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => item.Date)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => item.Seller.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => item.Seller.Department.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => item.Amount)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => item.Status)
+                    </th>
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
 
