--- a/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
@@ -1,7 +1,77 @@
-﻿
+﻿@model IEnumerable<IGrouping<Department, SalesRecord>>
+
 @{
     ViewData["Title"] = "Grouping Search";
+    DateTime minDate = DateTime.Parse(ViewData["minDate"] as string);
+    DateTime maxDate = DateTime.Parse(ViewData["maxDate"] as string);
 }
 
 <h1>@ViewData["Title"]</h1>
+
+<nav class="navbar navbar-expand-md bg-dark">
+    <div class="container-fluid">
+        <form class="navbar-nav w-100" role="search">
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="minDate">Min Date</label>
+                    <input type="date" class="form-control" name="minDate" value=@ViewData["minDate"] />
+                </div>
+                <div class="form-group">
+                    <label for="maxDate">Max Date</label>
+                    <input type="date" class="form-control" name="maxDate" value=@ViewData["maxDate"] />
+                </div>
+                <button type="submit" class="btn btn-primary">Filter</button>
+            </div>
+        </form>
+    </div>
+</nav>
+
+@foreach (var departmentGroup in Model)
+{
+    <div class="card">
+        <div class="card-header">
+            <h3 class="card-title">@departmentGroup.Key.Name, Total Sales = @departmentGroup.Key.TotalSales(minDate, maxDate).ToString("F2")</h3>
+        </div>
+        <div class="card-body">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr class="bg-primary text-white">
+                        <th>
+                            Date
+                        </th>
+                        <th>
+                            Amount
+                        </th>
+                        <th>
+                            Seller
+                        </th>
+                        <th>
+                            Status
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in departmentGroup)
+                    {
+                        <tr>
+                            <th>
+                                @Html.DisplayFor(model => item.Date)
+                            </th>
+                            <th>
+                                @Html.DisplayFor(model => item.Amount)
+                            </th>
+                            <th>
+                                @Html.DisplayFor(model => item.Seller.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayFor(model => item.Status)
+                            </th>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+}
+
 
